[gd_scene load_steps=3 format=3 uid="uid://dv3sujajqjjig"]

[ext_resource type="Script" uid="uid://dx23pqiv76gus" path="res://items/portable_block_item.gd" id="1_c2o3p"]
[ext_resource type="Texture2D" uid="uid://co5i0jeihdtnd" path="res://items/portable_block_item.png" id="1_mf4e7"]

[node name="PortableBlockItem" type="Node2D"]
script = ExtResource("1_c2o3p")

[node name="VisualAid" type="Sprite2D" parent="."]
self_modulate = Color(0.623529, 1, 0.623529, 0.498039)
position = Vector2(50, 15)
texture = ExtResource("1_mf4e7")

[node name="PortableBlock" type="Sprite2D" parent="."]
position = Vector2(50, 15)
scale = Vector2(0.45, 0.45)
texture = ExtResource("1_mf4e7")
